examples/test/testpolicy2324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2324
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key3: value35
      key23: value20
      key26: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value49
      podSelector:
        matchLabels:
          key20: value25
